--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,52 @@
-# --- Web Server & Production ---
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.12.1
+async-timeout==5.0.1
+attrs==25.4.0
+blinker==1.9.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+distro==1.9.0
+exceptiongroup==1.3.1
+ffmpeg==1.4
+filelock==3.20.3
 Flask==3.1.1
-Gunicorn==23.0.0
-Werkzeug==3.1.3
+flatbuffers==24.3.25
+frozenlist==1.8.0
+grpcio==1.74.0
+gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+humanfriendly==10.0
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
 MarkupSafe==3.0.2
-
-# --- Infraestructura de Datos & API ---
-requests==2.32.4
-pocketbase       # Si usas la librería oficial, añádela aquí
-urllib3==2.5.0
-pydantic==2.11.7
-
-# --- Procesamiento & GPU (Ray) ---
-ray==2.42.1
-ffmpeg==1.4
+msgpack==1.1.2
+multidict==6.7.1
+packaging==26.0
+pocketbase==0.15.0
+propcache==0.4.1
 protobuf==5.26.1
-grpcio==1.74.0
-
-# --- Hardware (Jetson specific) ---
-smbus2==0.5.0
-distro==1.9.0
-
-# --- Utilidades ---
-click==8.2.1
-blinker==1.9.0
-colorama==0.4.6
-aiohttp==3.12.15
-
+pydantic==2.11.7
+pydantic_core==2.33.2
 python-dotenv==1.2.1
-
-coloredlogs==15.0.1
-flatbuffers==24.3.25
+PyYAML==6.0.3
+ray==2.42.1
+referencing==0.37.0
+requests==2.32.4
+rpds-py==0.30.0
+smbus2==0.5.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
+yarl==1.22.0
