--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,12 @@ jobs:
         with:
           name: coverage-badge
           path: coverage-badge.svg
+
+      - name: Commit coverage badge to repo
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          mv coverage-badge.svg assets/coverage-badge.svg
+          git add assets/coverage-badge.svg
+          git commit -m "Update coverage badge" || echo "No changes to commit"
+          git push
