--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -13,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -23,7 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install coverage
+          pip install coverage coverage-badge
 
       - name: Run tests with coverage
         run: |
@@ -40,19 +45,13 @@ jobs:
 
       - name: Generate coverage badge
         run: |
-          pip install coverage-badge
           coverage-badge -o coverage-badge.svg -f
-
-      - name: Upload coverage badge
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-badge
-          path: coverage-badge.svg
 
       - name: Commit coverage badge to repo
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
+          mkdir -p assets
           mv coverage-badge.svg assets/coverage-badge.svg
           git add assets/coverage-badge.svg
           git commit -m "Update coverage badge" || echo "No changes to commit"
