--- a/k3s/cine-deployment.yaml
+++ b/k3s/cine-deployment.yaml
@@ -33,7 +33,10 @@ spec:
                   key: POCKETBASE_URL
 
             - name: MOVIES_FOLDER
-              value: "/data/movies"
+              valueFrom:
+                configMapKeyRef:
+                  name: cine-config
+                  key: MOVIES_FOLDER
 
             - name: FLASK_HOST
               valueFrom:
