--- a/k3s/cine-config.yaml
+++ b/k3s/cine-config.yaml
@@ -41,5 +41,5 @@ data:
   # 🔑 OAuth2 Endpoints (NO sensibles)
   # ============================
   OAUTH2_AUTHORIZE_ENDPOINT: "/authorize"
-  OAUTH2_TOKEN_ENDPOINT: "/token"
+  OAUTH2_TOKEN_ENDPOINT: "/oauth/token"
   OAUTH2_USERINFO_ENDPOINT: "/userinfo"
