--- a/k3s/cine-service.yaml
+++ b/k3s/cine-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cine-platform-service
+  name: cine-platform
   namespace: cine
 spec:
   type: NodePort
   selector:
     app: cine-platform
   ports:
-    - port: 80
-      targetPort: 5000
-      nodePort: 30080
+    - port: 9443
+      targetPort: 9443
+      nodePort: 30443
