--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0   # necesario para poder hacer checkout de la rama
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -47,6 +48,11 @@ jobs:
         run: |
           coverage-badge -o coverage-badge.svg -f
 
+      - name: Switch to main branch (fix detached HEAD)
+        run: |
+          git fetch origin main
+          git checkout main
+
       - name: Commit coverage badge to repo
         run: |
           git config --global user.name "github-actions"
@@ -55,4 +61,4 @@ jobs:
           mv coverage-badge.svg assets/coverage-badge.svg
           git add assets/coverage-badge.svg
           git commit -m "Update coverage badge" || echo "No changes to commit"
-          git push
+          git push origin main
