--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Dependencias principales
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.2.1
@@ -16,3 +17,16 @@ requests==2.32.4
 urllib3==2.5.0
 Werkzeug==3.1.3
 PyJWT==2.11.0
+
+# Dependencias de desarrollo y testing
+pytest==8.3.5
+pytest-cov==6.0.0
+pytest-xdist==3.6.1
+pytest-mock==3.14.0
+coverage==7.6.12
+coverage-badge==1.1.2
+flake8==7.1.2
+black==25.1.0
+isort==6.0.1
+mypy==1.15.0
+types-requests==2.32.0.20250306
