--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0   # necesario para poder hacer checkout de la rama
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -29,14 +29,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install coverage coverage-badge
+          pip install pytest pytest-cov coverage coverage-badge
 
-      - name: Run tests with coverage
+      - name: Create necessary directories
         run: |
-          coverage run -m unittest discover -s tests -p "test_*.py"
-          coverage report -m
-          coverage xml
-          coverage html
+          mkdir -p /tmp/uploads /tmp/thumbnails /tmp/outputs
+          mkdir -p logs
+
+      - name: Run tests with coverage (pytest)
+        run: |
+          python -m pytest tests/ \
+            --cov=. \
+            --cov-report=term-missing \
+            --cov-report=xml \
+            --cov-report=html \
+            -v
 
       - name: Upload coverage HTML report
         uses: actions/upload-artifact@v4
@@ -58,7 +65,11 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           mkdir -p assets
-          mv coverage-badge.svg assets/coverage-badge.svg
-          git add assets/coverage-badge.svg
-          git commit -m "Update coverage badge" || echo "No changes to commit"
-          git push origin main
+          if [ -f coverage-badge.svg ]; then
+            mv coverage-badge.svg assets/coverage-badge.svg
+            git add assets/coverage-badge.svg
+            git commit -m "Update coverage badge" || echo "No changes to commit"
+            git push origin main
+          else
+            echo "Coverage badge not found"
+          fi
