--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-cov coverage coverage-badge
+          pip install pytest pytest-cov
 
       - name: Create necessary directories
         run: |
@@ -45,14 +45,9 @@ jobs:
           echo "<!-- dummy -->" > tests/templates/play.html
           echo "<!-- dummy -->" > tests/templates/admin_panel.html
 
-      - name: Run tests with coverage (pytest)
+      - name: Run tests with coverage
         run: |
-          python -m pytest tests/ \
-            --cov=. \
-            --cov-report=term-missing \
-            --cov-report=xml \
-            --cov-report=html \
-            -v
+          pytest tests/ --cov=. --cov-report=term-missing --cov-report=html
 
       - name: Upload coverage HTML report
         uses: actions/upload-artifact@v4
@@ -60,13 +55,19 @@ jobs:
           name: coverage-html
           path: htmlcov/
 
-      - name: Generate coverage badge from XML
+      - name: Get coverage percentage
+        id: coverage
         run: |
-          # Extraer porcentaje de cobertura del XML
-          COVERAGE=$(grep -o 'line-rate="[0-9.]*"' coverage.xml | head -1 | grep -o '[0-9.]*')
-          PERCENT=$(echo "$COVERAGE * 100" | bc | cut -d. -f1)
+          # Extraer porcentaje del reporte HTML
+          PERCENT=$(grep -o 'pc_cov">[0-9.]*%' htmlcov/index.html | head -1 | grep -o '[0-9.]*' | cut -d. -f1)
+          echo "percent=$PERCENT" >> $GITHUB_OUTPUT
+          echo "Coverage: $PERCENT%"
+
+      - name: Generate coverage badge
+        run: |
+          PERCENT=${{ steps.coverage.outputs.percent }}
           
-          # Determinar color según porcentaje
+          # Determinar color
           if [ $PERCENT -ge 90 ]; then
             COLOR="brightgreen"
           elif [ $PERCENT -ge 75 ]; then
@@ -77,24 +78,15 @@ jobs:
             COLOR="red"
           fi
           
-          # Generar badge con shields.io
+          # Generar badge
           curl -s "https://img.shields.io/badge/coverage-$PERCENT%25-$COLOR" > coverage-badge.svg
 
-      - name: Switch to main branch (fix detached HEAD)
-        run: |
-          git fetch origin main
-          git checkout main
-
-      - name: Commit coverage badge to repo
+      - name: Commit coverage badge
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           mkdir -p assets
-          if [ -f coverage-badge.svg ]; then
-            mv coverage-badge.svg assets/coverage-badge.svg
-            git add assets/coverage-badge.svg
-            git commit -m "Update coverage badge" || echo "No changes to commit"
-            git push origin main
-          else
-            echo "Coverage badge not found"
-          fi
+          mv coverage-badge.svg assets/coverage-badge.svg
+          git add assets/coverage-badge.svg
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update coverage badge"
+          git push origin main
