jwt auth mejorado

--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,11 @@
+MOVIES_FOLDER=/data/media
+
 # ============================
 # 🔐 Seguridad (desarrollo)
 # ============================
 SECRET_KEY=dev_secret_key_123
-
+JWT_SECRET_KEY=CLAVE_DEV_INSEGURA
+JWT_AUDIENCE=oauth2-resource
 # ============================
 # 🌍 Flask (desarrollo)
 # ============================
