--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 python-dotenv==1.2.1
+Flask-WTF==1.2.1
+python-magic==0.4.27
+Flask-Limiter==3.3.1
 requests==2.32.4
 urllib3==2.5.0
 Werkzeug==3.1.3
