fortalecer acceso login

--- a/k3s/cine-deployment-dev.yaml
+++ b/k3s/cine-deployment-dev.yaml
@@ -202,5 +202,5 @@ spec:
 
         - name: movies
           hostPath:
-            path: /media/d/audiovisual
+            path: /mnt/servidor/Data2TB/audiovisual/
             type: Directory
