This is a combination of 4 commits.
info peli en player

info peli en player

info peli en player

info peli en player

--- a/k3s/cine-config.yaml
+++ b/k3s/cine-config.yaml
@@ -24,6 +24,7 @@ data:
   # 🎬 Media / Streaming
   # ============================
   MOVIES_FOLDER: "/data/movies"
+  OMDB_LANGUAGE: "es"
 
   # ============================
   # 🎞️ Video Optimization
